# tree-sitter-jayvee

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-jayvee.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jayvee/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJayvee/: jayvee.h
bindings/swift/TreeSitterJayveeTests/: TreeSitterJayveeTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: model.txt
