[package]
name = "tree-sitter-jayvee"
description = "Jayvee is a domain-specific language and runtime for automated processing of data pipelines."
version = "0.6.4-alpha"
authors = ["JValue"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "jayvee"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jvalue/jayvee"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.25.0"
